[build-system]
requires = [
    # First version of setuptools to support pyproject.toml configuration
    "setuptools>=61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = 'hashwire'
version = '0.0.2'
description = 'Hashwire creates a optimized hash multichain commitment'
readme = 'README.md'
authors = [
    { name = 'Hugo Labraaten', email='hugokinner@gmail.com' }
]
license = {file = 'LICENSE'}
dependencies = [
]
classifiers = [
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Operating System :: OS Independent',
]

[tool.poetry]
readme = 'README.md'

[project.urls]
repository = 'https://github.com/Hugloss/hashWire'

[tool.setuptools.packages.find]
where = ["src"]
include = ["hashwire*"]
